# s3-director

./: Cargo.toml  shell.nix
src/: main.rs
